Fix overflow on deposit tc

--- a/src/scss/objects/user/_deposit__step2.scss
+++ b/src/scss/objects/user/_deposit__step2.scss
@@ -110,6 +110,7 @@
         max-height: 0;
         opacity: 0;
         transition: all 500ms linear;
+        overflow: hidden;
 
         &-content {
           padding: $sm;
